--- a/index.html
+++ b/index.html
@@ -1,114 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DeporNET!</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - Sportflix</title>
+    <link rel="stylesheet" href="styles.css">
 
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+<body>
     <header>
-        <a href="../index.html">Inicio</a>
-        <a href="./Pages/quienessomos.html">Quienes somos?</a>
-        <a href="./Pages/contacto.html">Contacto</a>
-      </header>
-    <main>
-      <h1>Bienvenido a DeporNET, el lugar de tus deportes favoritos !</h1>
-
-      <div class="grid-container">
-        <div class="grid-item">
-          <a href="Pages/futbol.html">Futbol</a>
-          <img src="img/futbol.jpg" alt="imagen futbol" />
-        </div>
-        <div class="grid-item">
-          <a href="pages/basquet.html">Basquet</a>
-          <img src="img/basquet.jpg" alt="" />
-        </div>
-        <div class="grid-item">
-          <a href="pages/jockey.html">Jockey</a>
-          <img src="img/hockey.jpg" alt="" />
-        </div>
-        <div class="grid-item">
-          <a href="Pages/tenis.html">Tenis</a>
-          <img src="img/tenis.jpg" alt="" />
-        </div>
-        <div class="grid-item">
-          <a href="Pages/rugby.html">Rugby</a>
-          <img src="img/rugby.jpg" alt="" />
-        </div>
-        <div class="grid-item">
-          <a href="Pages/otros.html">Otros</a>
-          <img src="img/varios.jpg" alt="" />
-        </div>
-      </div>
-    </main>
-    <footer class="text-center text-white" style="background-color: #2b2b2b">
-      <!-- Grid container -->
-      <div class="container pt-4 row " style=" margin-left: auto; margin-right: auto">
-        <!-- Section: Social media -->
-        <section class="col-12">
-          <!-- Facebook -->
-          <a
-            class="btn btn-outline-light btn-floating m-2 col-3"
-            target="_blank"
-            href="https://www.facebook.com/augus2poletti"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-
-          <!-- Instagram -->
-          <a
-            class="btn btn-outline-light btn-floating m-2 col-3"
-            target="_blank"
-            href="https://www.instagram.com/auguspoletti/"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-instagram"></i
-          ></a>
-
-          <!-- Linkedin -->
-          <a
-            class="btn btn-outline-light btn-floating m-2 col-3"
-            target="_blank"
-            href="https://www.linkedin.com/in/augusto-poletti/"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-          <!-- Github -->
-          <a
-            class="btn btn-outline-light btn-floating m-2 col-3"
-            target="_blank"
-            href="https://github.com/Auguspo"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-github"></i
-          ></a>
+        <h1>Sportflix</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="vivo.html">Vivo</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+        <section id="inicio">
+            <h2>Bienvenidos a Sportflix</h2>
+            <!-- Contenido principal de la página de inicio -->
         </section>
-        <!-- Section: Social media -->
-        <!-- Copyright -->
-      </div>
-      <!-- Grid container -->
+   
+    </header>
 
-      <div
-        class="text-center text-light p-3"
-        style="background-color: #2b2b2b"
-      >
-        © 2023 Copyright:
-        <a class="text-light" href="https://mdbootstrap.com/">DeporNET</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-  </body>
+ 
+       
+<main>
+    <h2>Canales Deportivos en Argentina</h2>
+    <ul class="canales-deportivos">
+        <li>
+            <a href="enlace_al_canal1">
+                <img src="https://quemirasbobo.surge.sh/webp/logos/fsportp.webp" alt="Canal 1">
+                <h3>ESPN Premium</h3>
+            </a>
+        </li>
+        <li>
+            <a href="enlace_al_canal2">
+                <img src="imagen_canal2.jpg" alt="Canal 2">
+                <h3>Canal 2</h3>
+            </a>
+        </li>
+        <li>
+            <a href="enlace_al_canal3">
+                <img src="imagen_canal3.jpg" alt="Canal 3">
+                <h3>Canal 3</h3>
+            </a>
+        </li>
+        <li>
+            <a href="enlace_al_canal4">
+                <img src="imagen_canal4.jpg" alt="Canal 4">
+                <h3>Canal 4</h3>
+            </a>
+        </li>
+        <li>
+            <a href="enlace_al_canal5">
+                <img src="imagen_canal5.jpg" alt="Canal 5">
+                <h3>Canal 5</h3>
+            </a>
+        </li>
+        <li>
+            <a href="enlace_al_canal6">
+                <img src="imagen_canal6.jpg" alt="Canal 6">
+                <h3>Canal 5</h3>
+            </a>
+        </li>
+    </ul>
+</main>
+<footer>
+    <div class="redes-sociales">
+        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-lg"></i></a>
+        <a href="https://www.twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
+    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</footer>
+</body>
 </html>
