--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <section id="inicio">
-            <h2>Bienvenidos a Sportflix</h2>
+            <h2>Bienvenidos a DeporNET</h2>
             <!-- Contenido principal de la página de inicio -->
         </section>
    
@@ -38,32 +38,32 @@
         </li>
         <li>
             <a href="enlace_al_canal2">
-                <img src="imagen_canal2.jpg" alt="Canal 2">
-                <h3>Canal 2</h3>
+                <img src="https://quemirasbobo.surge.sh/webp/logos/tntsport.webp" alt="Canal 2">
+                <h3>TNT Sports HD</h3>
             </a>
         </li>
         <li>
             <a href="enlace_al_canal3">
-                <img src="imagen_canal3.jpg" alt="Canal 3">
-                <h3>Canal 3</h3>
+                <img src="https://quemirasbobo.surge.sh/webp/logos/tyc.webp" alt="Canal 3">
+                <h3>TyC Sports</h3>
             </a>
         </li>
         <li>
             <a href="enlace_al_canal4">
-                <img src="imagen_canal4.jpg" alt="Canal 4">
-                <h3>Canal 4</h3>
+                <img src="https://quemirasbobo.surge.sh/webp/logos/fsport.webp" alt="Canal 4">
+                <h3>Fox Sports</h3>
             </a>
         </li>
         <li>
             <a href="enlace_al_canal5">
-                <img src="imagen_canal5.jpg" alt="Canal 5">
-                <h3>Canal 5</h3>
+                <img src="https://quemirasbobo.surge.sh/webp/logos/dtvsports.webp" alt="Canal 5">
+                <h3>DSPORTS</h3>
             </a>
         </li>
         <li>
             <a href="enlace_al_canal6">
-                <img src="imagen_canal6.jpg" alt="Canal 6">
-                <h3>Canal 5</h3>
+                <img src="https://quemirasbobo.surge.sh/webp/logos/optimized/goltv.webp" alt="Canal 6">
+                <h3>GOLTV</h3>
             </a>
         </li>
     </ul>
