--- a/vivo.html
+++ b/vivo.html
@@ -25,44 +25,44 @@
                 <!-- Evento 1 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="descarga.jpeg" alt="Evento 1">
+                    <img src="futbol.jpeg" alt="Evento 1">
                     <h3>Partido de Fútbol</h3>
                     <p>Disfruta de un emocionante partido de fútbol en vivo.</p>
                 </div>
                 <!-- Evento 2 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="evento2.jpg" alt="Evento 2">
+                    <img src="tenis.jpg" alt="Evento 2">
                     <h3>Torneo de Tenis</h3>
                     <p>El torneo de tenis más importante del año te espera.</p>
                 </div>
                 <!-- Evento 3 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="evento3.jpg" alt="Evento 3">
-                    <h3>Carrera de Autos</h3>
-                    <p>Presencia la velocidad en esta emocionante carrera de autos.</p>
+                    <img src="F1.jpeg" alt="Evento 3">
+                    <h3>Lo mejor de la F1</h3>
+                    <p>Presencia la velocidad en esta emocionante carrera de F1.</p>
                 </div>
                 <!-- Evento 4 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="evento4.jpg" alt="Evento 4">
-                    <h3>Partido de Baloncesto</h3>
-                    <p>Acción en la cancha con este partido de baloncesto en vivo.</p>
+                    <img src="basquet.jpg" alt="Evento 4">
+                    <h3>Partido de Basquet</h3>
+                    <p>Acción en la cancha con este partido de basquet en vivo.</p>
                 </div>
                 <!-- Evento 5 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="evento5.jpg" alt="Evento 5">
+                    <img src="Golf.jpg" alt="Evento 5">
                     <h3>Torneo de Golf</h3>
                     <p>Los mejores golfistas compiten en este torneo en vivo.</p>
                 </div>
                 <!-- Evento 6 -->
                 <div class="evento">
                     <div class="live-badge">LIVE</div>
-                    <img src="evento6.jpg" alt="Evento 6">
-                    <h3>Partido de Hockey</h3>
-                    <p>El hielo se calienta con este emocionante partido de hockey en vivo.</p>
+                    <img src="hockey.jpg" alt="Evento 6">
+                    <h3>Partido de Jockey</h3>
+                    <p>Vive el apasionante torneo nacional de Hockey en vivo.</p>
                 </div>
             </div>
         </section>
