--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Sportflix</h1>
+        <h1>DeportNET</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
