--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - DeportNET</title>
+    <title>Inicio - DeporNET</title>
     <link rel="stylesheet" href="styles.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>DeportNET</h1>
+        <h1>DeporNET</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
