--- a/vivo.html
+++ b/vivo.html
@@ -1,76 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventos Deportivos - DeporNET</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="deportes.ico.png" type="image/x-icon">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" href="/css/img/deportes.ico.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <h1>DeporNET</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="vivo.html">Vivo</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <h1>DeporNET</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="vivo.html">Vivo</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section id="eventos">
-            <h2>Eventos en vivo</h2>
-            <div class="grid-container">
-                <!-- Evento 1 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="futbol.jpeg" alt="Evento 1">
-                    <h3>Partido de Fútbol</h3>
-                    <p>Disfruta de un emocionante partido de fútbol en vivo.</p>
-                </div>
-                <!-- Evento 2 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="tenis.jpg" alt="Evento 2">
-                    <h3>Torneo de Tenis</h3>
-                    <p>El torneo de tenis más importante del año te espera.</p>
-                </div>
-                <!-- Evento 3 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="F1.jpeg" alt="Evento 3">
-                    <h3>Lo mejor de la F1</h3>
-                    <p>Presencia la velocidad en esta emocionante carrera de F1.</p>
-                </div>
-                <!-- Evento 4 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="basquet.jpg" alt="Evento 4">
-                    <h3>Partido de Basquet</h3>
-                    <p>Acción en la cancha con este partido de basquet en vivo.</p>
-                </div>
-                <!-- Evento 5 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="Golf.jpg" alt="Evento 5">
-                    <h3>Torneo de Golf</h3>
-                    <p>Los mejores golfistas compiten en este torneo en vivo.</p>
-                </div>
-                <!-- Evento 6 -->
-                <div class="evento">
-                    <div class="live-badge">LIVE</div>
-                    <img src="hockey.jpg" alt="Evento 6">
-                    <h3>Partido de Jockey</h3>
-                    <p>Vive el apasionante torneo nacional de Hockey en vivo.</p>
-                </div>
-            </div>
-        </section>
+      <section id="eventos">
+        <h2>Eventos en vivo</h2>
+        <div class="grid-container">
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/futbol.jpeg" alt="Evento 1" />
+            <h3>Partido de Fútbol</h3>
+            <p>Disfruta de un emocionante partido de fútbol en vivo.</p>
+          </div>
+
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/tenis.jpg" alt="Evento 2" />
+            <h3>Torneo de Tenis</h3>
+            <p>El torneo de tenis más importante del año te espera.</p>
+          </div>
+
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/F1.jpeg" alt="Evento 3" />
+            <h3>Lo mejor de la F1</h3>
+            <p>Presencia la velocidad en esta emocionante carrera de F1.</p>
+          </div>
+
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/basquet.jpg" alt="Evento 4" />
+            <h3>Partido de Basquet</h3>
+            <p>Acción en la cancha con este partido de basquet en vivo.</p>
+          </div>
+
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/Golf.jpg" alt="Evento 5" />
+            <h3>Torneo de Golf</h3>
+            <p>Los mejores golfistas compiten en este torneo en vivo.</p>
+          </div>
+
+          <div class="evento">
+            <div class="live-badge">LIVE</div>
+            <img src="./css/img/hockey.jpg" alt="Evento 6" />
+            <h3>Partido de Jockey</h3>
+            <p>Vive el apasionante torneo nacional de Hockey en vivo.</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 DeporNET</p>
+      <div class="redes-sociales">
+        <a href="https://www.facebook.com"
+          ><i class="fab fa-facebook fa-lg"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fab fa-twitter fa-lg"></i
+        ></a>
+        <a href="https://www.instagram.com"
+          ><i class="fab fa-instagram fa-lg"></i
+        ></a>
+      </div>
+      <div class="map-container">
+        <iframe
+          src="./css/img/https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar"
+          width="80%"
+          height="200"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
