--- a/index.html
+++ b/index.html
@@ -1,80 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio - DeporNET</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="deportes.ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" href="/css/img/deportes.ico.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <h1>DeporNET</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="vivo.html">Vivo</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <section id="inicio">
-            <h2>Bienvenidos a DeporNET</h2>
-            <!-- Contenido principal de la página de inicio -->
-        </section>
-   
+      <h1>DeporNET</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="vivo.html">Vivo</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <section id="inicio">
+        <h2>Bienvenidos a DeporNET</h2>
+      </section>
     </header>
 
- 
-       
-<main>
-    <h2>Canales Deportivos en Argentina</h2>
-    <ul class="canales-deportivos">
+    <main>
+      <h2>Canales Deportivos en Argentina</h2>
+      <ul class="canales-deportivos">
         <li>
-            <a href="enlace_al_canal1">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/fsportp.webp" alt="Canal 1">
-                <h3>ESPN Premium</h3>
-            </a>
+          <a href="enlace_al_canal1">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/fsportp.webp"
+              alt="Canal 1"
+            />
+            <h3>ESPN Premium</h3>
+          </a>
         </li>
         <li>
-            <a href="enlace_al_canal2">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/tntsport.webp" alt="Canal 2">
-                <h3>TNT Sports HD</h3>
-            </a>
+          <a href="enlace_al_canal2">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/tntsport.webp"
+              alt="Canal 2"
+            />
+            <h3>TNT Sports HD</h3>
+          </a>
         </li>
         <li>
-            <a href="enlace_al_canal3">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/tyc.webp" alt="Canal 3">
-                <h3>TyC Sports</h3>
-            </a>
+          <a href="enlace_al_canal3">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/tyc.webp"
+              alt="Canal 3"
+            />
+            <h3>TyC Sports</h3>
+          </a>
         </li>
         <li>
-            <a href="enlace_al_canal4">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/fsport.webp" alt="Canal 4">
-                <h3>Fox Sports</h3>
-            </a>
+          <a href="enlace_al_canal4">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/fsport.webp"
+              alt="Canal 4"
+            />
+            <h3>Fox Sports</h3>
+          </a>
         </li>
         <li>
-            <a href="enlace_al_canal5">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/dtvsports.webp" alt="Canal 5">
-                <h3>DSPORTS</h3>
-            </a>
+          <a href="enlace_al_canal5">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/dtvsports.webp"
+              alt="Canal 5"
+            />
+            <h3>DSPORTS</h3>
+          </a>
         </li>
         <li>
-            <a href="enlace_al_canal6">
-                <img src="https://quemirasbobo.surge.sh/webp/logos/optimized/goltv.webp" alt="Canal 6">
-                <h3>GOLTV</h3>
-            </a>
+          <a href="enlace_al_canal6">
+            <img
+              src="https://quemirasbobo.surge.sh/webp/logos/optimized/goltv.webp"
+              alt="Canal 6"
+            />
+            <h3>GOLTV</h3>
+          </a>
         </li>
-    </ul>
-</main>
-<footer>
-    <div class="redes-sociales">
-        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-lg"></i></a>
-        <a href="https://www.twitter.com"><i class="fab fa-twitter fa-lg"></i></a>
-        <a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
-    </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</footer>
-</body>
+      </ul>
+    </main>
+    <footer>
+      <div class="redes-sociales">
+        <a href="https://www.facebook.com"
+          ><i class="fab fa-facebook fa-lg"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fab fa-twitter fa-lg"></i
+        ></a>
+        <a href="https://www.instagram.com"
+          ><i class="fab fa-instagram fa-lg"></i
+        ></a>
+      </div>
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar"
+          width="80%"
+          height="200"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
+    </footer>
+  </body>
 </html>
