Correccion css index - iframe vivo

--- a/vivo.html
+++ b/vivo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventos Deportivos - DeporNET</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="icon" href="/css/img/deportes.ico.png" type="image/x-icon" />
+    <link rel="icon" href="./css/img/deportes.ico.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -86,7 +86,7 @@
       </div>
       <div class="map-container">
         <iframe
-          src="./css/img/https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d33092.719331983986!2d-58.40425875754984!3d-34.62404285983101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696976766162!5m2!1ses-419!2sar"
           width="80%"
           height="200"
           style="border: 0"
