Imagenes local canales

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>
           <a href="enlace_al_canal1">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/fsportp.webp"
+              src="../TPOPython/css/img/ESPNPremium.jpg"
               alt="Canal 1"
             />
             <h3>ESPN Premium</h3>
@@ -41,7 +41,7 @@
         <li>
           <a href="enlace_al_canal2">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/tntsport.webp"
+              src="../TPOPython/css/img/TNTSportV2.jpg"
               alt="Canal 2"
             />
             <h3>TNT Sports HD</h3>
@@ -50,7 +50,7 @@
         <li>
           <a href="enlace_al_canal3">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/tyc.webp"
+              src="../TPOPython/css/img/TyCSports.jpg"
               alt="Canal 3"
             />
             <h3>TyC Sports</h3>
@@ -59,7 +59,7 @@
         <li>
           <a href="enlace_al_canal4">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/fsport.webp"
+              src="../TPOPython/css/img/FOXSport.jpg"
               alt="Canal 4"
             />
             <h3>Fox Sports</h3>
@@ -68,7 +68,7 @@
         <li>
           <a href="enlace_al_canal5">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/dtvsports.webp"
+              src="../TPOPython/css/img/DSports.jpg"
               alt="Canal 5"
             />
             <h3>DSPORTS</h3>
@@ -77,7 +77,7 @@
         <li>
           <a href="enlace_al_canal6">
             <img
-              src="https://quemirasbobo.surge.sh/webp/logos/optimized/goltv.webp"
+              src="../TPOPython/css/img/GOLTV.jpg"
               alt="Canal 6"
             />
             <h3>GOLTV</h3>
