--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Canales Deportivos en Argentina</h2>
       <ul class="canales-deportivos">
         <li>
-          <a href="enlace_al_canal1">
+          <a href="espnpremium.html">
             <img
               src="../TPOPython/css/img/ESPNPremium.jpg"
               alt="Canal 1"
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="enlace_al_canal2">
+          <a href="tntsports.html">
             <img
               src="../TPOPython/css/img/TNTSportV2.jpg"
               alt="Canal 2"
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li>
-          <a href="enlace_al_canal3">
+          <a href="tycsports.html">
             <img
               src="../TPOPython/css/img/TyCSports.jpg"
               alt="Canal 3"
@@ -57,7 +57,7 @@
           </a>
         </li>
         <li>
-          <a href="enlace_al_canal4">
+          <a href="foxsports.html">
             <img
               src="../TPOPython/css/img/FOXSport.jpg"
               alt="Canal 4"
@@ -66,7 +66,7 @@
           </a>
         </li>
         <li>
-          <a href="enlace_al_canal5">
+          <a href="dsports.html">
             <img
               src="../TPOPython/css/img/DSports.jpg"
               alt="Canal 5"
@@ -75,7 +75,7 @@
           </a>
         </li>
         <li>
-          <a href="enlace_al_canal6">
+          <a href="goltv.html">
             <img
               src="../TPOPython/css/img/GOLTV.jpg"
               alt="Canal 6"
