Prueba primer reproductor canales (ESPN)

--- a/espnpremium.html
+++ b/espnpremium.html
@@ -22,11 +22,16 @@
         </ul>
       </nav>
 
-      </section>
     </header>
 
     <main>
-   
+      <div class="grid-video1">
+      <div> 
+      <video controls width="60%">
+          <source src="tu_video.mp4" type="video/mp4">
+      </video>
+      <p>Estamos en mantenimiento, intentelo mas tarde.</p>
+    </div>
     </main>
 
 
