--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>
           <a href="espnpremium.html">
             <img
-              src="../TPOPython/css/img/ESPNPremium.jpg"
+              src="./css/img/ESPNPremium.png"
               alt="Canal 1"
             />
             <h3>ESPN Premium</h3>
@@ -41,7 +41,7 @@
         <li>
           <a href="tntsports.html">
             <img
-              src="../TPOPython/css/img/TNTSportV2.jpg"
+              src="./css/img/TNTSportV2.png"
               alt="Canal 2"
             />
             <h3>TNT Sports HD</h3>
@@ -50,7 +50,7 @@
         <li>
           <a href="tycsports.html">
             <img
-              src="../TPOPython/css/img/TyCSports.jpg"
+              src="./css/img/TyCSports.png"
               alt="Canal 3"
             />
             <h3>TyC Sports</h3>
@@ -59,7 +59,7 @@
         <li>
           <a href="foxsports.html">
             <img
-              src="../TPOPython/css/img/FOXSport.jpg"
+              src="./css/img/FOXSport.png"
               alt="Canal 4"
             />
             <h3>Fox Sports</h3>
@@ -68,7 +68,7 @@
         <li>
           <a href="dsports.html">
             <img
-              src="../TPOPython/css/img/DSports.jpg"
+              src="./css/img/DSports.png"
               alt="Canal 5"
             />
             <h3>DSPORTS</h3>
@@ -77,7 +77,7 @@
         <li>
           <a href="goltv.html">
             <img
-              src="../TPOPython/css/img/GOLTV.jpg"
+              src="./css/img/GOLTV.png"
               alt="Canal 6"
             />
             <h3>GOLTV</h3>
