Correccion URL index

--- a/vivo.html
+++ b/vivo.html
@@ -27,7 +27,7 @@
       <section id="eventos">
         <h2>Eventos en vivo</h2>
         <div class="grid-container">
-          <div class="evento">
+          <div class="evento">     
             <div class="live-badge">LIVE</div>
             <img src="./css/img/futbol.jpeg" alt="Evento 1" />
             <h3>Partido de Fútbol</h3>
@@ -65,7 +65,7 @@
           <div class="evento">
             <div class="live-badge">LIVE</div>
             <img src="./css/img/hockey.jpg" alt="Evento 6" />
-            <h3>Partido de Jockey</h3>
+            <h3>Partido de Hockey</h3>
             <p>Vive el apasionante torneo nacional de Hockey en vivo.</p>
           </div>
         </div>
