--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Canales Deportivos en Argentina</h2>
       <ul class="canales-deportivos">
         <li>
-          <a href="espnpremium.html">
+          <a href="https://sfndeportes.com/ver/espn-premium">
             <img
               src="./css/img/ESPNPremium.png"
               alt="Canal 1"
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li>
-          <a href="tntsports.html">
+          <a href="https://sfndeportes.com/ver/tnt-sports">
             <img
               src="./css/img/TNTSportV2.png"
               alt="Canal 2"
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li>
-          <a href="tycsports.html">
+          <a href="https://sfndeportes.com/ver/tyc-sports">
             <img
               src="./css/img/TyCSports.png"
               alt="Canal 3"
@@ -57,7 +57,7 @@
           </a>
         </li>
         <li>
-          <a href="foxsports.html">
+          <a href="https://sfndeportes.com/ver/fox-sports">
             <img
               src="./css/img/FOXSport.png"
               alt="Canal 4"
@@ -66,7 +66,7 @@
           </a>
         </li>
         <li>
-          <a href="dsports.html">
+          <a href="https://sfndeportes.com/ver/dsports-1">
             <img
               src="./css/img/DSports.png"
               alt="Canal 5"
@@ -75,7 +75,7 @@
           </a>
         </li>
         <li>
-          <a href="goltv.html">
+          <a href="https://sfndeportes.com/ver/goltv">
             <img
               src="./css/img/GOLTV.png"
               alt="Canal 6"
