Correccion paginas vivo

--- a/vivo.html
+++ b/vivo.html
@@ -29,42 +29,54 @@
         <div class="grid-container">
           <div class="evento">     
             <div class="live-badge">LIVE</div>
+            <a href="futbolvivo.html">
             <img src="./css/img/futbol.jpeg" alt="Evento 1" />
+          </a>
             <h3>Partido de Fútbol</h3>
             <p>Disfruta de un emocionante partido de fútbol en vivo.</p>
           </div>
 
           <div class="evento">
             <div class="live-badge">LIVE</div>
+            <a href="tenisvivo.html">
             <img src="./css/img/tenis.jpg" alt="Evento 2" />
+            </a>
             <h3>Torneo de Tenis</h3>
             <p>El torneo de tenis más importante del año te espera.</p>
           </div>
 
           <div class="evento">
             <div class="live-badge">LIVE</div>
+            <a href="f1vivo.html">
             <img src="./css/img/F1.jpeg" alt="Evento 3" />
+            </a>
             <h3>Lo mejor de la F1</h3>
             <p>Presencia la velocidad en esta emocionante carrera de F1.</p>
           </div>
 
           <div class="evento">
             <div class="live-badge">LIVE</div>
+            <a href="basquetvivo.html">
             <img src="./css/img/basquet.jpg" alt="Evento 4" />
+            </a>
             <h3>Partido de Basquet</h3>
             <p>Acción en la cancha con este partido de basquet en vivo.</p>
           </div>
 
           <div class="evento">
             <div class="live-badge">LIVE</div>
+            <a href="golfvivo.html">
             <img src="./css/img/Golf.jpg" alt="Evento 5" />
+            </a>
             <h3>Torneo de Golf</h3>
             <p>Los mejores golfistas compiten en este torneo en vivo.</p>
           </div>
 
           <div class="evento">
             <div class="live-badge">LIVE</div>
+            <a href="hockeyvivo.html">
             <img src="./css/img/hockey.jpg" alt="Evento 6" />
+            </a>
             <h3>Partido de Hockey</h3>
             <p>Vive el apasionante torneo nacional de Hockey en vivo.</p>
           </div>
