--- a/basquetvivo.html
+++ b/basquetvivo.html
@@ -24,9 +24,17 @@
 
     </header>
 
-    <main>
-   
-    </main>
+
+      <main>
+        <div class="grid-video1">
+        <div> 
+        <video controls width="60%">
+            <source src="tu_video.mp4" type="video/mp4">
+        </video>
+        <p>Estamos en mantenimiento, intentelo mas tarde.</p>
+      </div>
+      </main>
+  
 
 
     <footer>
