--- a/hockeyvivo.html
+++ b/hockeyvivo.html
@@ -25,7 +25,13 @@
     </header>
 
     <main>
-   
+      <div class="grid-video1">
+      <div> 
+      <video controls width="60%">
+          <source src="tu_video.mp4" type="video/mp4">
+      </video>
+      <p>Estamos en mantenimiento, intentelo mas tarde.</p>
+    </div>
     </main>
 
 
