--- a/vivo.html
+++ b/vivo.html
@@ -19,6 +19,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="vivo.html">Vivo</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="equipos.html">Equipos</a></li>
         </ul>
       </nav>
     </header>
