--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,8 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="vivo.html">Vivo</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="equipos.html">Equipos</a></li>
         </ul>
       </nav>
     </header>
